Snap: cleanup
Applied lint suggestions

Change-Id: I244a4cc5d136fb33bbedd219fc38def0d7e6e4b1
Signed-off-by: jrizzoli <joey@cyanogenmoditalia.it>